# conceptualizing-machine

./: MANIFEST.in  README.md  pyproject.toml
src/conceptualizing_machine/: config.py  machina.yaml
