[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"
[project]
name = "conceptualizing-machine"
version = "0.0.1"
authors = [
    {name="Machina Ratiocinatrix", email="machina.ratio@gmail.com"},
]
description = "A Machine that conceptualizes meanings."
readme = "README.md"
requires-python = ">=3.10"
classifiers=[
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
]

keywords = ["conceptualizing-machine"]

dependencies = [
    "electroid >= 0.0.19",
    "opehaina >= 0.0.5",
    "castor-pollux >= 0.1.4",
    "PyGithub >= 2.6.0",
    "PyYAML >= 6.0.1",
    "urllib3 >= 2.0.4",
    "requests >= 2.32.3",
    "click >= 8.3.0"
]

[project.scripts]
conceptualizing-machine = "conceptualizing_machine.cli:run"

[project.urls]
"Homepage" = "https://github.com/conceptualizing-machine/conceptualizing-machine"